MDEV-18356 Renamed backup-encrypted option introduced in 7158edcba3af3766e9329f9927ce4adfd2a40bf8

Rename it because it caused parser warning whenever --backup was used.