extra/mariabackup/xtrabackup.h
@@ -108,7 +108,7 @@ extern my_bool		opt_no_backup_locks;
 extern my_bool		opt_decompress;
 extern my_bool		opt_remove_original;
 extern my_bool		opt_extended_validation;
-extern my_bool		opt_backup_encrypted;
+extern my_bool		opt_encrypted_backup;
 extern my_bool		opt_lock_ddl_per_table;
 
 extern char		*opt_incremental_history_name;
